--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,4 @@
-# .env is better suited for public variables, ie, variables that should not commited
-# For secret variables is better to use DevServerControl tool with set_env_variable: ["KEY", "SECRET"]
-
-# https://www.builder.io/c/docs/using-your-api-key
-VITE_PUBLIC_BUILDER_KEY=__BUILDER_PUBLIC_KEY__
-PING_MESSAGE="ping pong"
+VITE_API_BASE_URL=http://localhost:5000/api
+VITE_NODE_ENV=development
+VITE_APP_NAME=CommerceForge
+VITE_APP_VERSION=1.0.0
