--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "dotenv": "^17.2.0",
     "express": "^4.18.2",
     "zod": "^3.23.8"
