--- a/backend/env.example
+++ b/backend/env.example
@@ -10,4 +10,16 @@ JWT_SECRET=your_jwt_secret_here
 JWT_EXPIRE=24h
 
 # API Configuration
-API_VERSION=v1 
+API_VERSION=v1
+
+# Email Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your_email@gmail.com
+SMTP_PASS=your_app_password
+FROM_EMAIL=noreply@commerceforge.com
+FRONTEND_URL=http://localhost:8080
+
+# Development Email (Ethereal)
+ETHEREAL_USER=test@ethereal.email
+ETHEREAL_PASS=test123 
